Initial page template and setup view working. Commented out affordances until they have someplace to go.

--- a/djangocap/Assure_Me/templates/initial.html
+++ b/djangocap/Assure_Me/templates/initial.html
@@ -9,7 +9,16 @@
 
 <body>
   <h1>Welcome to Assure Me!</h1>
-
+    <div>
+        {% comment %}
+        <a href="{% url 'Assure_Me:login' %}">Login</a>
+        {% endcomment %}
+    </div>
+    <div>
+        {% comment %}
+        <a href="{% url 'Assure_Me:register' %}">Register</a>
+        {% endcomment %}
+    </div>
 </body>
 
 </html>
