Login and Register forms both post and validate data.

--- a/djangocap/Assure_Me/templates/register.html
+++ b/djangocap/Assure_Me/templates/register.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <title>Bangazon</title>
+    <title>Assure</title>
 </head>
 
 <body>
-    <h1>Register with Bangazon</h1>
+    <h1>Register with Assure Me</h1>
 
     <strong>Register here!</strong>
     <br />
