Added and configured redirect path to user specific home page.

--- a/djangocap/Assure_Me/templates/login.html
+++ b/djangocap/Assure_Me/templates/login.html
@@ -7,6 +7,13 @@
 
 <body>
     <h1>Login to Assure Me</h1>
+    
+    {% if bad_login %}
+        <div>
+            <h3>Either your Username and/or Password is invalid</h3>
+            <p>Please try again:</p>
+        </div>
+    {% endif %}
 
     <form id="login_form" method="post" action="{% url 'Assure_Me:login' %}">
         {% comment %} This weird input hides the variable that holds a redirect path when the login form is submitted. {% endcomment %}
