--- a/djangocap/Assure_Me/templates/register.html
+++ b/djangocap/Assure_Me/templates/register.html
@@ -13,7 +13,7 @@
 
     <form id="register_form" method="post" action="{% url 'Assure_Me:register' %}" enctype="multipart/form-data">
         {% comment %} This weird input hides the variable that holds a redirect path when the register form is submitted. {% endcomment %}
-        <input type="hidden" name="next" value="/"/>
+        <input type="hidden" name="next" value="/home"/>
         {% csrf_token %}
 
         <!-- Display each form. The as_p method wraps each element in a paragraph
