--- a/djangocap/Assure_Me/templates/user_home.html
+++ b/djangocap/Assure_Me/templates/user_home.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  {% include "navbar.html" %}
   <h1>Welcome to your Assure Me Home Page!</h1>
   <h1>Hello {{ user.first_name }}!</h1>
 
