--- a/djangocap/Assure_Me/templates/account.html
+++ b/djangocap/Assure_Me/templates/account.html
@@ -7,12 +7,16 @@
   </head>
   <body>
     {% include "navbar.html" %}
+    
     <h1>My Account</h1>
+    
+    {% block account %}
     <h2>First name: {{ user.first_name }}</h2>
     <h2>Last name: {{user.last_name}}</h2>
     <h2>Email: {{ user.email }}</h2>
     <h2>Phone Number: {{ user.phone_number }}</h2>
     <h2>Account Created: {{ user.date_joined }}</h2>
+    {% endblock %}
 
     {% include "helpful_tips.html" %}
 
