--- a/djangocap/Assure_Me/templates/account_edit.html
+++ b/djangocap/Assure_Me/templates/account_edit.html
@@ -1,10 +1,11 @@
 {% extends "account.html" %}
 
 {% block account %}
-<form method="post" enctype="multipart/form-data">
+<form method="post">
     {% csrf_token %}
-    {{ customer_form.as_p }}
+
     {{ user_form.as_p }}
-    <button type="submit">Update Account Information</button>
+
+    <button type="submit">Update Information</button>
 </form>
 {% endblock %}
