Affirmation view accounts for all the users affirmations and also if it is empty. No 404 errors provided.

--- a/djangocap/Assure_Me/templates/affirmations.html
+++ b/djangocap/Assure_Me/templates/affirmations.html
@@ -1,8 +1,12 @@
 
 <h1>Affirmations</h1>
 
-{% for affirmation in affirmations %}
-<div class="product">
-  <p> {{affirmation.affirmation}} </p>
-</div>
-{% endfor %}
+{% if affirmations %}
+
+    {% for affirmation in affirmations %}
+        <div class="product">
+            <p> {{affirmation.affirmation}} </p>
+        </div>
+    {% endfor %}
+
+{% endif %}
