--- a/djangocap/Assure_Me/templates/affirmations.html
+++ b/djangocap/Assure_Me/templates/affirmations.html
@@ -2,10 +2,10 @@
 <h1>Affirmations</h1>
 
 {% include "navbar.html"%}
-<form id="affirmation_input" method="post" action="{% url 'Assure_Me:affirmations' %}">
+<form id="affirmation_input" method="post" action="{% url 'Assure_Me:new_affirmation' %}">
+    {% csrf_token %}
     <br /> Write A New Affirmation Here!
     <input type="text" name="New_Affirmation" value=""/>
-    <br />
     <input type="submit" value="Write" />
 </form>
 
