Added missing docstring to affirmation_edit_view and adjusted docstring and comments in twilio_view

--- a/djangocap/Assure_Me/templates/user_home.html
+++ b/djangocap/Assure_Me/templates/user_home.html
@@ -10,7 +10,7 @@
 <body>
   {% include "navbar.html" %}
   <h1>Welcome to your Assure Me Home Page!</h1>
-  <h1>Hello {{ user.first_name }}!</h1>
+  <h1>Hello, {{ user.first_name }}!</h1>
 
   {% include "helpful_tips.html" %}
   <div>
