--- a/djangocap/Assure_Me/static/css/nav.css
+++ b/djangocap/Assure_Me/static/css/nav.css
@@ -5,3 +5,36 @@ body {
 .is_hidden {
     display: none
 }
+
+img {
+    width:90px;
+}
+
+.Assure_Me_Nav {
+    font-family: 'Tangerine', cursive;
+    font-weight: 900;
+    font-size: 2.5rem;
+    border-top: solid #FFFF00 10px;
+    border-left: solid #FFFF00 10px;
+    display: block;
+    position: relative;
+    height: 105px;
+}
+
+.Assure_Me_Button p{
+    margin-left: -75px;
+    text-decoration: none;
+    display: inline-block;
+    color: #FFFF00
+}
+
+.Logout_Button{
+    font-family: 'Tangerine', cursive;
+    font-weight: 900;
+    font-size: 2.5rem;
+    text-decoration: none;
+    color: #FFFF00;
+    position: absolute;
+    right: 15px;
+    bottom: -1px;
+}
