--- a/djangocap/Assure_Me/templates/navbar.html
+++ b/djangocap/Assure_Me/templates/navbar.html
@@ -1,12 +1,16 @@
 {% load staticfiles %}
 
+<link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
+
 <link rel="stylesheet" type="text/css" href="{% static 'css/nav.css' %}">
 
     <nav class="navbar">
         {% if user.is_authenticated %}
-        <a href="{% url 'Assure_Me:home' %}"><img src="{% static 'images/sunshine.png' %}"></a>
-        <a href="{% url 'Assure_Me:logout' %}">Logout</a>
+        <div class="Assure_Me_Nav">
+            <a class="Assure_Me_Button" href="{% url 'Assure_Me:home' %}"><img src="{% static 'images/sunshine.png' %}"><p>Assure Me</p></a>
+            <a class="Logout_Button"href="{% url 'Assure_Me:logout' %}">Logout</a>
+        </div>
         {% else %}
-        <a href="{% url 'Assure_Me:initial' %}"><img src="{% static 'images/sunshine.png' %}"></a>
+        <a class="Assure_Me_Nav Assure_Me_Button" href="{% url 'Assure_Me:initial' %}"><img src="{% static 'images/sunshine.png' %}"><p>Assure Me</p></a>
         {% endif %}
     </nav>
