--- a/djangocap/Assure_Me/templates/navbar.html
+++ b/djangocap/Assure_Me/templates/navbar.html
@@ -1,8 +1,7 @@
 {% load staticfiles %}
 
-<link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
-
-<link rel="stylesheet" type="text/css" href="{% static 'css/nav.css' %}">
+<link href="https://fonts.googleapis.com/css?family=Raleway|Tangerine" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 
     <nav class="navbar">
         {% if user.is_authenticated %}
