--- a/djangocap/Assure_Me/templates/register.html
+++ b/djangocap/Assure_Me/templates/register.html
@@ -8,7 +8,7 @@
 <body>
 
     {% include "navbar.html" %}
-    <h1>Register with Assure Me</h1>
+    <h1 class="Header">Register with Assure Me</h1>
 
     <strong>Register here!</strong>
     <br />
