--- a/djangocap/Assure_Me/templates/user_home.html
+++ b/djangocap/Assure_Me/templates/user_home.html
@@ -9,8 +9,8 @@
 
 <body>
   {% include "navbar.html" %}
-  <h1>Welcome to your Assure Me Home Page!</h1>
-  <h1>Hello, {{ user.first_name }}!</h1>
+  <h1 class="Header">Welcome to your Assure Me Home Page!</h1>
+  <h1 class="Header">Hello, {{ user.first_name }}!</h1>
 
   {% include "helpful_tips.html" %}
   <div>
