--- a/djangocap/Assure_Me/templates/account.html
+++ b/djangocap/Assure_Me/templates/account.html
@@ -8,7 +8,7 @@
   <body>
     {% include "navbar.html" %}
     
-    <h1>My Account</h1>
+    <h1 class="Header">My Account</h1>
 
     {% block account %}
     <h2>First name: {{ user.first_name }}</h2>
