--- a/djangocap/Assure_Me/templates/login.html
+++ b/djangocap/Assure_Me/templates/login.html
@@ -8,7 +8,7 @@
 <body>
 
     {% include "navbar.html" %}
-    <h1>Login to Assure Me</h1>
+    <h1 class="Header">Login to Assure Me</h1>
     
     {% if bad_login %}
         <div>
