Login form page complete with css.

--- a/djangocap/Assure_Me/templates/initial.html
+++ b/djangocap/Assure_Me/templates/initial.html
@@ -10,7 +10,7 @@
 <body>
     {% include "navbar.html" %}
     <h1 class="Header">Welcome to Assure Me!</h1>
-        <p class="Blurb">Assure Me is an app that helps people with their depression. Daily affirmations, or positive statements about yourself, help with confidence and self-esteem. Sometimes you just need a little bit of validation. It can be hard to remember to do daily or just hard to remember niceties about yourself. Once a day you can recieve a text message to turn their thinking around with a personal affirmation of you wrote for yourself.</p>
+        <p class="Blurb">Assure Me is an app that helps people with their depression. Daily affirmations, or positive statements about yourself, help with confidence and self-esteem. Sometimes you just need a little bit of validation. It can be hard to remember to do daily or just hard to remember niceties about yourself. Once a day you can receive a text message to turn their thinking around with a personal affirmation of you wrote for yourself.</p>
         <div class="Initial_Buttons">
             <a href="{% url 'Assure_Me:login' %}">Login</a>
             <a href="{% url 'Assure_Me:register' %}">Register</a>
