--- a/djangocap/Assure_Me/static/css/main.css
+++ b/djangocap/Assure_Me/static/css/main.css
@@ -1,10 +1,7 @@
 body {
     background: #6C585B;
     font-family: 'Raleway', sans-serif;
-}
-
-p {
-    color:#D0D3AA 
+    color: #D0D3AA
 }
 
 a {
@@ -71,4 +68,55 @@ img {
 .Initial_Buttons a {
     border-top: solid #FBE178 2.5px;
     border-left: solid #FBE178 2.5px;
+}
+
+.Form_Div {
+    text-align: center;
+}
+
+#login_form {
+    display: inline-block;
+    text-align: center;
+    font-size: 1.2rem;
+    border-top: solid #FBE178 2.5px;
+    border-left: solid #FBE178 2.5px;
+    margin-top: 5% 
+}
+
+#login_form h3 {
+    padding: 10px
+}
+
+input {
+    height: 30px;
+    margin: 10px;
+    border-radius: 10px 
+}
+
+.Submit_Login {
+    background:none;
+    padding:10;
+    font-size: 1.7rem;
+    font-family: 'Tangerine', cursive;
+    font-weight: 900;
+    color: #FBE178;
+    border:none; 
+    border-top: solid #FBE178 2.5px;
+    border-left: solid #FBE178 2.5px; 
+    cursor: pointer
+}
+
+.Form {
+    display: table-row;
+}
+
+.Form label{
+    display: table-cell;
+    text-align: left;
+    padding-left: 10px;
+    padding-top: 25px 
+}
+
+.Form input{
+    display: table-cell;
 }
