--- a/djangocap/Assure_Me/templates/login.html
+++ b/djangocap/Assure_Me/templates/login.html
@@ -10,24 +10,33 @@
     {% include "navbar.html" %}
     <h1 class="Header">Login to Assure Me</h1>
     
-    {% if bad_login %}
-        <div>
-            <h3>Either your Username and/or Password is invalid</h3>
-            <p>Please try again:</p>
-        </div>
-    {% endif %}
+    <div class="Form_Div">
+        <form id="login_form" method="post" action="{% url 'Assure_Me:login' %}">
+            {% csrf_token %}
 
-    <form id="login_form" method="post" action="{% url 'Assure_Me:login' %}">
-        {% comment %} This weird input hides the variable that holds a redirect path when the login form is submitted. {% endcomment %}
-        <input type="hidden" name="next" value="{{ next }}"/>
-        {% csrf_token %} Username:
-        <input type="text" name="username" value="" size="50" />
-        <br /> Password:
-        <input type="password" name="password" value="" size="50" />
-        <br />
+            {% if bad_login %}
+            <div class="Login_Error">
+                <h3>Either your Username and/or Password is invalid</h3>
+                <p>Please try again:</p>
+            </div>
+            {% endif %}
+            
+            {% comment %} This weird input hides the variable that holds a redirect path when the login form is submitted. {% endcomment %}
+            <input type="hidden" name="next" value="{{ next }}"/>
+            <div class="Form">
+                <label>Username:</label>
+                <input type="text" name="username" value="" size="50" />
+            </div>
+            <div class="Form">
 
-        <input type="submit" value="submit" />
-    </form>
+                <label>Password:</label>
+                <input type="password" name="password" value="" size="50" />
+            </div>
+            <br />
+
+            <input class="Submit_Login" type="submit" value="Submit" />
+        </form>
+    </div>
 
 </body>
 
