Home Page CSS complete

--- a/djangocap/Assure_Me/templates/helpful_tips.html
+++ b/djangocap/Assure_Me/templates/helpful_tips.html
@@ -1,4 +1,4 @@
-<div>
+<div class="Help_Tips">
     <h2>How To Effectively Use Assure Me:</h2>
     <p>You must have at least one affirmation saved to recieve messages. Navigate to the affirmation page to write some! </p>
     <p>In order to recieve your daily affirmation text message, you must add your phone number if you haven't already.</p>
