--- a/djangocap/Assure_Me/static/css/main.css
+++ b/djangocap/Assure_Me/static/css/main.css
@@ -19,6 +19,8 @@ img {
     width:90px;
 }
 
+/* Nav */
+
 .Assure_Me_Nav {
     font-family: 'Tangerine', cursive;
     font-weight: 900;
@@ -49,6 +51,8 @@ img {
     bottom: -1px;
 }
 
+/* Initial Page */
+
 .Header {
     text-align: center;
     color: #B0BA8D
@@ -69,6 +73,8 @@ img {
     border-top: solid #FBE178 2.5px;
     border-left: solid #FBE178 2.5px;
 }
+
+/* Login Page */
 
 .Form_Div {
     text-align: center;
@@ -93,7 +99,7 @@ input {
     border-radius: 10px 
 }
 
-.Submit_Login {
+.Submit {
     background:none;
     padding:10;
     font-size: 1.7rem;
@@ -103,7 +109,8 @@ input {
     border:none; 
     border-top: solid #FBE178 2.5px;
     border-left: solid #FBE178 2.5px; 
-    cursor: pointer
+    cursor: pointer;
+    width: 75px
 }
 
 .Form {
@@ -119,4 +126,57 @@ input {
 
 .Form input{
     display: table-cell;
+}
+
+#sub{
+    width: 75px
+}
+
+/* Register Page */
+
+#register_form {
+    display: inline-block;
+    text-align: center;
+    font-size: 1.2rem;
+    border-top: solid #FBE178 2.5px;
+    border-left: solid #FBE178 2.5px; 
+}
+
+.Form_Div label{
+    display: table-cell;
+    text-align: left;
+    padding-left: 10px;
+    padding-top: 5px 
+}
+
+.Form_Div input{
+    display: table-cell;
+    height: 30px;
+    width: 250px;
+    margin: 10px;
+    border-radius: 10px 
+}
+
+/* Home */
+
+
+.Home_Buttons{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.Home_Buttons a {
+    border-top: solid #FBE178 2.5px;
+    border-left: solid #FBE178 2.5px;
+    margin-top: 2% 
+}
+
+/* Helpful Tips */
+
+.Help_Tips {
+    background: #F1E9D8;
+    color: #B0806A;
+    margin: 15px;
+    padding: 5px;
+    text-align: center
 }
