--- a/djangocap/Assure_Me/templates/login.html
+++ b/djangocap/Assure_Me/templates/login.html
@@ -34,7 +34,7 @@
             </div>
             <br />
 
-            <input class="Submit_Login" type="submit" value="Submit" />
+            <input id="sub" class="Submit" type="submit" value="Submit" />
         </form>
     </div>
 
