--- a/djangocap/Assure_Me/templates/user_home.html
+++ b/djangocap/Assure_Me/templates/user_home.html
@@ -13,11 +13,9 @@
   <h1 class="Header">Hello, {{ user.first_name }}!</h1>
 
   {% include "helpful_tips.html" %}
-  <div>
+  <div class="Home_Buttons">
       <a href="{% url 'Assure_Me:affirmations' %}">Affirmations</a>
-  </div>
-  <div>
-      <a href="{% url 'Assure_Me:account' %}">Account Information</a>
+      <a href="{% url 'Assure_Me:account' %}">Account Info</a>
   </div>
   
 </body>
