--- a/djangocap/Assure_Me/templates/helpful_tips.html
+++ b/djangocap/Assure_Me/templates/helpful_tips.html
@@ -1,3 +1,21 @@
+
+{% if request.get_full_path == "/account" %}
+<div class="Help_Tips_Edit">
+    <h2>How To Effectively Use Assure Me:</h2>
+    <p>You must have at least one affirmation saved to recieve messages. Navigate to the affirmation page to write some! </p>
+    <p>In order to recieve your daily affirmation text message, you must add your phone number if you haven't already.</p>
+    <p>You must confirm your phone number in a text message in order to recieve your daily messages.</p>
+    <p>(If you need to do add or remove your phone number, go to the account information page!)</p>
+</div>
+{% elif request.get_full_path == "/account_edit" %}
+<div class="Help_Tips_Edit">
+    <h2>How To Effectively Use Assure Me:</h2>
+    <p>You must have at least one affirmation saved to recieve messages. Navigate to the affirmation page to write some! </p>
+    <p>In order to recieve your daily affirmation text message, you must add your phone number if you haven't already.</p>
+    <p>You must confirm your phone number in a text message in order to recieve your daily messages.</p>
+    <p>(If you need to do add or remove your phone number, go to the account information page!)</p>
+</div>
+{% elif request.get_full_path == "/home" %}
 <div class="Help_Tips">
     <h2>How To Effectively Use Assure Me:</h2>
     <p>You must have at least one affirmation saved to recieve messages. Navigate to the affirmation page to write some! </p>
@@ -5,3 +23,5 @@
     <p>You must confirm your phone number in a text message in order to recieve your daily messages.</p>
     <p>(If you need to do add or remove your phone number, go to the account information page!)</p>
 </div>
+{% else %}
+{% endif %}
