Fixed affirmation css when no affirmations.

--- a/djangocap/Assure_Me/templates/affirmations.html
+++ b/djangocap/Assure_Me/templates/affirmations.html
@@ -36,6 +36,11 @@
 
 {% include "helpful_tips.html" %}
 </div>
+{% else %}
+<div class="All_Affirmation_Container">
+        <div class="Affirmation_List"></div>
+    {% include "helpful_tips.html" %}
+</div>
 {% endif %}
 
 
